--- a/plugin.xml
+++ b/plugin.xml
@@ -1,28 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android" id="com.outsystems.smsretriever" version="1.0.0">
-   
+
    <name>SmsRetrieverPlugin</name>
 
    <js-module name="SmsRetrieverPlugin" src="www/SmsRetrieverPlugin.js">
       <clobbers target="cordova.plugins.SmsRetrieverPlugin" />
    </js-module>
 
-   <!-- Android Platform -->
    <platform name="android">
+
       <config-file parent="/*" target="res/xml/config.xml">
          <feature name="SmsRetrieverPlugin">
             <param name="android-package" value="com.outsystems.smsretriever.SmsRetrieverPlugin" />
          </feature>
       </config-file>
-      <config-file parent="/*" target="AndroidManifest.xml" />
 
-    <!-- Adding files and gradle configuration to SmsRetrieverPlugin -->
-    <source-file src="src/android/SmsRetrieverPlugin.java" target-dir="src/com/outsystems/smsretriever" />
-    <source-file src="src/android/OtpReceivedInterface.java" target-dir="src/com/outsystems/smsretriever" />
-    <source-file src="src/android/SmsRetrieverHandler.java" target-dir="src/com/outsystems/smsretriever" />
-    <source-file src="src/android/AppSignatureHelper.java" target-dir="src/com/outsystems/smsretriever" />
+      <!-- ✅ ADICIONADO: Corrige o erro no Android 12+ -->
+      <config-file target="AndroidManifest.xml" parent="application">
+         <receiver
+           android:name="com.google.android.gms.auth.api.phone.SmsRetrieverBroadcastReceiver"
+           android:permission="com.google.android.gms.auth.api.phone.permission.SEND"
+           android:exported="true">
+           <intent-filter>
+             <action android:name="com.google.android.gms.auth.api.phone.SMS_RETRIEVED"/>
+           </intent-filter>
+         </receiver>
+      </config-file>
 
-    <framework custom="true" src="src/android/sms-retriever.gradle" type="gradleReference" />
+      <!-- Arquivos Java do plugin -->
+      <source-file src="src/android/SmsRetrieverPlugin.java" target-dir="src/com/outsystems/smsretriever" />
+      <source-file src="src/android/OtpReceivedInterface.java" target-dir="src/com/outsystems/smsretriever" />
+      <source-file src="src/android/SmsRetrieverHandler.java" target-dir="src/com/outsystems/smsretriever" />
+      <source-file src="src/android/AppSignatureHelper.java" target-dir="src/com/outsystems/smsretriever" />
+
+      <framework custom="true" src="src/android/sms-retriever.gradle" type="gradleReference" />
 
    </platform>
 </plugin>
